kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thefinisher-nodeapp
  namespace: production
spec:
  selector:
     app: thefinisher-nodeapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
