kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  namespace: production
  annotations:
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "nodeapp.thefinisher.xyz"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: thefinisher-nodeapp
            port:
              number: 3000
